--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,7 @@
 				<button id="menu-btn" class="md:hidden focus:outline-none text-2xl">☰</button>
 				<div id="menu" class="w-full md:w-auto hidden md:flex flex-col md:flex-row space-x-4 md:space-x-6 space-y-4 md:space-y-0 mt-4 md:mt-0">
 					<a href="/home" class="hover:text-gray-300">Home</a>
+					<a href="/predict" class="hover:text-gray-300">Predict</a>
 					<a href="/about" class="hover:text-gray-300">About</a>
 					<a href="#contact" class="hover:text-blue-500 transition">Contacts</a>
 				</div>
